--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -1,5 +1,6 @@
 #app {
 
+  //除了左侧菜单栏的右侧的中间的部分
   .main-container {
     min-height: 100%;
     transition: margin-left .28s;
@@ -7,6 +8,7 @@
     position: relative;
   }
 
+  //左侧菜单栏
   .sidebarHide {
     margin-left: 0!important;
   }
