设置动态路由，将 菜单栏 的路由进行添加到 addRoutes 中（失败，待解决，路由全部失效了） 将 src/permission 中 addRoute 删除，路由恢复正常，但是点击  菜单栏，会跳转到新的页面
显示 navabr 标题的布局

--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -84,6 +84,7 @@
     .submenu-title-noDropdown,
     .el-submenu__title {
       &:hover {
+        //鼠标悬浮  父目录  的颜色
         background-color: rgba(0, 0, 0, 0.06) !important;
       }
     }
