--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -20,10 +20,10 @@ $base-menu-light-color:rgba(0,0,0,.70);
 $base-menu-light-background:#ffffff;
 $base-logo-light-title-color: #001529;
 
-//子菜单目录展开的颜色
-$base-sub-menu-background:#324157;
+//子菜单、子目录目录展开的颜色
+$base-sub-menu-background:#1f2d3d;
 //鼠标悬浮子目录的颜色
-$base-sub-menu-hover:#30B08F;
+$base-sub-menu-hover:#001528;
 
 // 自定义暗色菜单风格
 /**
