--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,3 +1,4 @@
+//这里修改的是 app-main  显示区域的css
 @import './variables.scss';
 @import './mixin.scss';
 @import './transition.scss';
@@ -13,6 +14,7 @@ body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
 }
 
+//显示字体的粗细
 label {
   font-weight: 700;
 }
